[bugfix] navbar, banner and info ready

--- a/src/components/shared/Button/Button.css
+++ b/src/components/shared/Button/Button.css
@@ -1,7 +1,12 @@
-.shared-button{
-    padding: 8px 20px;
-    border-radius: 18px;
-    color: white;
-    border-color: transparent;
-    background-image: linear-gradient(to right, hsl(192, 70%, 51%), hsl(136, 65%, 51%))
+.shared-button {
+  cursor: pointer;
+  padding: 8px 20px;
+  border-radius: 18px;
+  color: white;
+  border-color: transparent;
+  background-image: linear-gradient(
+    to right,
+    hsl(192, 70%, 51%),
+    hsl(136, 65%, 51%)
+  );
 }
