--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,25 @@
-body{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-    width: 100%;
-    font-size: 16px;
+@import url('https://fonts.googleapis.com/css2?family=Public+Sans:wght@300;400;700&display=swap');
+
+body {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+  width: 100%;
+  font-size: 16px;
+  font-family: 'Public Sans', sans-serif;
 }
+
+h1,
+p {
+  margin: 0;
+  padding: 0;
+}
+
+button{
+  cursor: pointer;
+}
+
+h1,h4{
+color: hsl(233, 26%, 24%);
+}
+
