--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -15,6 +15,7 @@
 }
 .articles-background {
   background-color: hsl(0, 0%, 98%);
+  padding-bottom: 100px;
 }
 
 .articles-content h4:hover {
@@ -48,17 +49,27 @@
 
 .article-card img {
   width: 100%;
-  object-fit: contain;
+  object-fit: cover;
+  height: 320px;
 }
 
 .article-card-text {
   padding: 0 30px 10px 30px;
 }
 
+.article-card-text h4{
+  font-size: 1.2em;
+}
+
 @media (min-width: 700px) {
   .articles-card-content {
     gap: 40px;
     justify-content: space-between;
+    
+  }
+  .article-card img {
+   
+    height: 200px;
   }
 
   .article-card {
