--- a/src/components/Articles/Articles.css
+++ b/src/components/Articles/Articles.css
@@ -67,6 +67,10 @@
     justify-content: space-between;
     
   }
+  .articles-content > h1 {
+    font-size: 25px;
+    font-weight: 400;
+  }
   .article-card img {
    
     height: 200px;
