--- a/src/components/Banner/Banner.css
+++ b/src/components/Banner/Banner.css
@@ -11,7 +11,8 @@
   flex-basis: 100%;
   height: 50vh;
   width: 100%;
-  background: left/cover no-repeat;
+  background: cover no-repeat;
+  background-position: left;
 }
 
 .banner-right-box img {
@@ -27,7 +28,7 @@
   align-items: center;
   justify-content: center;
   gap: 20px;
-  padding: 0 0 0 50px;
+  padding-left:50px;
 }
 
 .banner-left-box h1 {
@@ -46,9 +47,10 @@
     flex-direction: row-reverse;
     justify-content: space-between;
     padding-bottom: 0;
+   
   }
   .banner-right-box {
-    flex-basis: 60%;
+    flex-basis: 50%;
     position: relative;
   }
 
@@ -58,6 +60,7 @@
   }
 
   .banner-left-box {
+
     flex-basis: 30%;
     align-items: flex-start;
     margin-top: 0;
@@ -71,9 +74,8 @@
   }
 }
 
-
-@media (min-width: 850px) {
-  .banner-main-box{
-    height: 70vh;
+@media (min-width:1300px){
+  .banner-left-box{
+    padding-left: 80px;
   }
 }
